fixed login alignment

--- a/src/styles/views/login-signup.scss
+++ b/src/styles/views/login-signup.scss
@@ -1,12 +1,15 @@
-.wrapper {
+.login-wrapper {
+    overflow: hidden;
     background-color: #f9fafc;
 }
 
 .main-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 44px);
+
     font-family: "-apple-system", BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
 
